# libcog

./: .eslintrc.yml  meson.build  meson_options.txt
cog/: cog-analytics-metadata.def.yaml  cog-authentication-result.def.yaml  cog-boxed-private.h  cog-client.cpp  cog-client.h  cog-code-delivery-details.def.yaml  cog-init.cpp  cog-init.h  cog-macros.h  cog-mfa-option.def.yaml  cog-new-device-metadata.def.yaml  cog-user-context-data.def.yaml  cog-utils-private.h  cog-utils.cpp  cog-utils.h  cog-version.h.in  cog.h  genboxed.py  libcog.map  meson.build
docs/: cog-docs.xml  cog-sections.txt  meson.build
overrides/: Cog.js
test/: meson.build  testClient.js  testInit.js
